--- a/assigment_3.cbp
+++ b/assigment_3.cbp
@@ -1,113 +1,122 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
+<?xml version="1.0" encoding="UTF-8"?>
 <CodeBlocks_project_file>
-   <FileVersion major="1" minor="6" />
-   <Project>
-      <Option title="assigment_3" />
-      <Option makefile_is_custom="1" />
-      <Option compiler="gcc" />
-      <Option virtualFolders="CMake Files\;" />
-      <Build>
-      <Target title="all">
-         <Option working_dir="/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final" />
-         <Option type="4" />
-         <MakeCommands>
-            <Build command="/usr/bin/make -f &quot;/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/Makefile&quot;  VERBOSE=1 all" />
-            <CompileFile command="/usr/bin/make -f &quot;/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/Makefile&quot;  VERBOSE=1 &quot;$file&quot;" />
-            <Clean command="/usr/bin/make -f &quot;/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/Makefile&quot;  VERBOSE=1 clean" />
-            <DistClean command="/usr/bin/make -f &quot;/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/Makefile&quot;  VERBOSE=1 clean" />
-         </MakeCommands>
-      </Target>
-      <Target title="rebuild_cache">
-         <Option working_dir="/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final" />
-         <Option type="4" />
-         <MakeCommands>
-            <Build command="/usr/bin/make -f &quot;/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/Makefile&quot;  VERBOSE=1 rebuild_cache" />
-            <CompileFile command="/usr/bin/make -f &quot;/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/Makefile&quot;  VERBOSE=1 &quot;$file&quot;" />
-            <Clean command="/usr/bin/make -f &quot;/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/Makefile&quot;  VERBOSE=1 clean" />
-            <DistClean command="/usr/bin/make -f &quot;/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/Makefile&quot;  VERBOSE=1 clean" />
-         </MakeCommands>
-      </Target>
-      <Target title="edit_cache">
-         <Option working_dir="/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final" />
-         <Option type="4" />
-         <MakeCommands>
-            <Build command="/usr/bin/make -f &quot;/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/Makefile&quot;  VERBOSE=1 edit_cache" />
-            <CompileFile command="/usr/bin/make -f &quot;/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/Makefile&quot;  VERBOSE=1 &quot;$file&quot;" />
-            <Clean command="/usr/bin/make -f &quot;/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/Makefile&quot;  VERBOSE=1 clean" />
-            <DistClean command="/usr/bin/make -f &quot;/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/Makefile&quot;  VERBOSE=1 clean" />
-         </MakeCommands>
-      </Target>
-      <Target title="app">
-         <Option output="/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/bin/app" prefix_auto="0" extension_auto="0" />
-         <Option working_dir="/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/bin" />
-         <Option object_output="./" />
-         <Option type="1" />
-         <Option compiler="gcc" />
-         <Compiler>
-            <Add directory="/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/qvm/include" />
-            <Add directory="/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/src" />
-            <Add directory="/usr/include" />
-            <Add directory="/usr/include/c++/6" />
-            <Add directory="/usr/include/c++/6/backward" />
-            <Add directory="/usr/include/x86_64-linux-gnu" />
-            <Add directory="/usr/include/x86_64-linux-gnu/c++/6" />
-            <Add directory="/usr/lib/gcc/x86_64-linux-gnu/6/include" />
-            <Add directory="/usr/lib/gcc/x86_64-linux-gnu/6/include-fixed" />
-            <Add directory="/usr/local/include" />
-         </Compiler>
-         <MakeCommands>
-            <Build command="/usr/bin/make -f &quot;/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/Makefile&quot;  VERBOSE=1 app" />
-            <CompileFile command="/usr/bin/make -f &quot;/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/Makefile&quot;  VERBOSE=1 &quot;$file&quot;" />
-            <Clean command="/usr/bin/make -f &quot;/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/Makefile&quot;  VERBOSE=1 clean" />
-            <DistClean command="/usr/bin/make -f &quot;/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/Makefile&quot;  VERBOSE=1 clean" />
-         </MakeCommands>
-      </Target>
-      <Target title="app/fast">
-         <Option output="/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/bin/app" prefix_auto="0" extension_auto="0" />
-         <Option working_dir="/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/bin" />
-         <Option object_output="./" />
-         <Option type="1" />
-         <Option compiler="gcc" />
-         <Compiler>
-            <Add directory="/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/qvm/include" />
-            <Add directory="/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/src" />
-            <Add directory="/usr/include" />
-            <Add directory="/usr/include/c++/6" />
-            <Add directory="/usr/include/c++/6/backward" />
-            <Add directory="/usr/include/x86_64-linux-gnu" />
-            <Add directory="/usr/include/x86_64-linux-gnu/c++/6" />
-            <Add directory="/usr/lib/gcc/x86_64-linux-gnu/6/include" />
-            <Add directory="/usr/lib/gcc/x86_64-linux-gnu/6/include-fixed" />
-            <Add directory="/usr/local/include" />
-         </Compiler>
-         <MakeCommands>
-            <Build command="/usr/bin/make -f &quot;/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/Makefile&quot;  VERBOSE=1 app/fast" />
-            <CompileFile command="/usr/bin/make -f &quot;/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/Makefile&quot;  VERBOSE=1 &quot;$file&quot;" />
-            <Clean command="/usr/bin/make -f &quot;/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/Makefile&quot;  VERBOSE=1 clean" />
-            <DistClean command="/usr/bin/make -f &quot;/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/Makefile&quot;  VERBOSE=1 clean" />
-         </MakeCommands>
-      </Target>
-      </Build>
-      <Unit filename="/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/app/app.cpp">
-         <Option target="app"/>
-      </Unit>
-      <Unit filename="/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/src/Actor.cpp">
-         <Option target="app"/>
-      </Unit>
-      <Unit filename="/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/src/Actor.h">
-         <Option target="app"/>
-      </Unit>
-      <Unit filename="/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/src/MathHelper.h">
-         <Option target="app"/>
-      </Unit>
-      <Unit filename="/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/src/Renderer.cpp">
-         <Option target="app"/>
-      </Unit>
-      <Unit filename="/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/src/Renderer.h">
-         <Option target="app"/>
-      </Unit>
-      <Unit filename="/home/michaelpollind/ownCloud/homework/graphics_interterm/assignment_final/CMakeLists.txt">
-          <Option virtualFolder="CMake Files\" />
-      </Unit>
-   </Project>
+	<FileVersion major="1" minor="6"/>
+	<Project>
+		<Option title="assigment_3"/>
+		<Option makefile_is_custom="1"/>
+		<Option compiler="gcc"/>
+		<Option virtualFolders="CMake Files\;"/>
+		<Build>
+			<Target title="all">
+				<Option working_dir="/home/michaelpollind/raymarching"/>
+				<Option type="4"/>
+				<MakeCommands>
+					<Build command="/usr/bin/make -j8 -f &quot;/home/michaelpollind/raymarching/Makefile&quot;  VERBOSE=1 all"/>
+					<CompileFile command="/usr/bin/make -j8 -f &quot;/home/michaelpollind/raymarching/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -j8 -f &quot;/home/michaelpollind/raymarching/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -j8 -f &quot;/home/michaelpollind/raymarching/Makefile&quot;  VERBOSE=1 clean"/>
+				</MakeCommands>
+			</Target>
+			<Target title="edit_cache">
+				<Option working_dir="/home/michaelpollind/raymarching"/>
+				<Option type="4"/>
+				<MakeCommands>
+					<Build command="/usr/bin/make -j8 -f &quot;/home/michaelpollind/raymarching/Makefile&quot;  VERBOSE=1 edit_cache"/>
+					<CompileFile command="/usr/bin/make -j8 -f &quot;/home/michaelpollind/raymarching/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -j8 -f &quot;/home/michaelpollind/raymarching/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -j8 -f &quot;/home/michaelpollind/raymarching/Makefile&quot;  VERBOSE=1 clean"/>
+				</MakeCommands>
+			</Target>
+			<Target title="rebuild_cache">
+				<Option working_dir="/home/michaelpollind/raymarching"/>
+				<Option type="4"/>
+				<MakeCommands>
+					<Build command="/usr/bin/make -j8 -f &quot;/home/michaelpollind/raymarching/Makefile&quot;  VERBOSE=1 rebuild_cache"/>
+					<CompileFile command="/usr/bin/make -j8 -f &quot;/home/michaelpollind/raymarching/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -j8 -f &quot;/home/michaelpollind/raymarching/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -j8 -f &quot;/home/michaelpollind/raymarching/Makefile&quot;  VERBOSE=1 clean"/>
+				</MakeCommands>
+			</Target>
+			<Target title="app">
+				<Option output="/home/michaelpollind/raymarching/bin/app" prefix_auto="0" extension_auto="0"/>
+				<Option working_dir="/home/michaelpollind/raymarching/bin"/>
+				<Option object_output="./"/>
+				<Option type="1"/>
+				<Option compiler="gcc"/>
+				<Compiler>
+					<Add directory="/home/michaelpollind/raymarching/src"/>
+					<Add directory="/home/michaelpollind/raymarching/qvm/include"/>
+					<Add directory="/usr/lib/gcc/x86_64-linux-gnu/6/include"/>
+					<Add directory="/usr/local/include"/>
+					<Add directory="/usr/lib/gcc/x86_64-linux-gnu/6/include-fixed"/>
+					<Add directory="/usr/include/x86_64-linux-gnu"/>
+					<Add directory="/usr/include"/>
+					<Add directory="/usr/include/c++/6"/>
+					<Add directory="/usr/include/x86_64-linux-gnu/c++/6"/>
+					<Add directory="/usr/include/c++/6/backward"/>
+				</Compiler>
+				<MakeCommands>
+					<Build command="/usr/bin/make -j8 -f &quot;/home/michaelpollind/raymarching/Makefile&quot;  VERBOSE=1 app"/>
+					<CompileFile command="/usr/bin/make -j8 -f &quot;/home/michaelpollind/raymarching/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -j8 -f &quot;/home/michaelpollind/raymarching/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -j8 -f &quot;/home/michaelpollind/raymarching/Makefile&quot;  VERBOSE=1 clean"/>
+				</MakeCommands>
+			</Target>
+			<Target title="app/fast">
+				<Option output="/home/michaelpollind/raymarching/bin/app" prefix_auto="0" extension_auto="0"/>
+				<Option working_dir="/home/michaelpollind/raymarching/bin"/>
+				<Option object_output="./"/>
+				<Option type="1"/>
+				<Option compiler="gcc"/>
+				<Compiler>
+					<Add directory="/home/michaelpollind/raymarching/src"/>
+					<Add directory="/home/michaelpollind/raymarching/qvm/include"/>
+					<Add directory="/usr/lib/gcc/x86_64-linux-gnu/6/include"/>
+					<Add directory="/usr/local/include"/>
+					<Add directory="/usr/lib/gcc/x86_64-linux-gnu/6/include-fixed"/>
+					<Add directory="/usr/include/x86_64-linux-gnu"/>
+					<Add directory="/usr/include"/>
+					<Add directory="/usr/include/c++/6"/>
+					<Add directory="/usr/include/x86_64-linux-gnu/c++/6"/>
+					<Add directory="/usr/include/c++/6/backward"/>
+				</Compiler>
+				<MakeCommands>
+					<Build command="/usr/bin/make -j8 -f &quot;/home/michaelpollind/raymarching/Makefile&quot;  VERBOSE=1 app/fast"/>
+					<CompileFile command="/usr/bin/make -j8 -f &quot;/home/michaelpollind/raymarching/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -j8 -f &quot;/home/michaelpollind/raymarching/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -j8 -f &quot;/home/michaelpollind/raymarching/Makefile&quot;  VERBOSE=1 clean"/>
+				</MakeCommands>
+			</Target>
+		</Build>
+		<Unit filename="/home/michaelpollind/raymarching/app/app.cpp">
+			<Option target="app"/>
+		</Unit>
+		<Unit filename="/home/michaelpollind/raymarching/src/Actor.cpp">
+			<Option target="app"/>
+		</Unit>
+		<Unit filename="/home/michaelpollind/raymarching/src/Actor.h">
+			<Option target="app"/>
+		</Unit>
+		<Unit filename="/home/michaelpollind/raymarching/src/Renderer.cpp">
+			<Option target="app"/>
+		</Unit>
+		<Unit filename="/home/michaelpollind/raymarching/src/Renderer.h">
+			<Option target="app"/>
+		</Unit>
+		<Unit filename="/home/michaelpollind/raymarching/src/Shaders/Program.cpp">
+			<Option target="app"/>
+		</Unit>
+		<Unit filename="/home/michaelpollind/raymarching/src/Shaders/Program.h">
+			<Option target="app"/>
+		</Unit>
+		<Unit filename="/home/michaelpollind/raymarching/src/Shaders/Source.cpp">
+			<Option target="app"/>
+		</Unit>
+		<Unit filename="/home/michaelpollind/raymarching/src/Shaders/Source.h">
+			<Option target="app"/>
+		</Unit>
+		<Unit filename="/home/michaelpollind/raymarching/CMakeLists.txt">
+			<Option virtualFolder="CMake Files\"/>
+		</Unit>
+	</Project>
 </CodeBlocks_project_file>
