--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/qvm"]
 	path = lib/qvm
 	url = https://github.com/boostorg/qvm.git
+[submodule "lib/tinyobjloader"]
+	path = lib/tinyobjloader
+	url = https://github.com/syoyo/tinyobjloader.git
