--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,9 +64,10 @@ include_directories(lib/lodepng)
 
 FILE(GLOB SRC "src/**/*.h" "src/**/*.cpp")
 FILE(GLOB LODEPNG "lib/lodepng/lodepng.h" "lib/lodepng/lodepng.cpp")
+FILE(GLOB TINY_OBJ_LOADER "lib/tinyobjloader/tiny_obj_loader.h" "lib/tinyobjloader/tiny_obj_loader.cc")
 
 MESSAGE(source files: "${SRC} ${HEADER}")
 
 
-add_executable(app ./app/app.cpp ${SRC} ${LODEPNG} src/View/View.cpp src/View/View.h)
+add_executable(app ./app/app.cpp ${SRC} ${LODEPNG} ${TINY_OBJ_LOADER})
 target_link_libraries (app ${Boost_LOG_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} ${OPENGL_LIBRARIES} )
