--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,9 @@ include_directories(${Boost_INCLUDE_DIR})
 include_directories(src)
 include_directories(lib/qvm/include)
 include_directories(lib/lodepng)
+include_directories(lib/tinyobjloader)
+
+file(COPY assets DESTINATION bin)
 
 FILE(GLOB SRC "src/**/*.h" "src/**/*.cpp")
 FILE(GLOB LODEPNG "lib/lodepng/lodepng.h" "lib/lodepng/lodepng.cpp")
@@ -69,5 +72,5 @@ FILE(GLOB TINY_OBJ_LOADER "lib/tinyobjloader/tiny_obj_loader.h" "lib/tinyobjload
 MESSAGE(source files: "${SRC} ${HEADER}")
 
 
-add_executable(app ./app/app.cpp ${SRC} ${LODEPNG} ${TINY_OBJ_LOADER})
-target_link_libraries (app ${Boost_LOG_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} ${OPENGL_LIBRARIES} )
+add_executable(app ./app/app.cpp ${SRC} ${LODEPNG} ${TINY_OBJ_LOADER} src/View/PerspectiveView.cpp src/View/PerspectiveView.h)
+target_link_libraries (app ${Boost_LOG_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})
